--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h2><a id="logo" href="./index.html">Wallpaper Generator</a></h2>
       <form class="search-form">
         <input type="text" name="search" class="search-input" />
-        <button type="submit" class="submit-button">Search</button>
+        <button type="submit" class="submit-btn">Search</button>
       </form>
     </header>
     <main>
